--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,11 @@
 
 
 <!--todo ejemplos de uso de servicio -->
-<app-lista-contactos></app-lista-contactos>
+<!-- <app-lista-contactos></app-lista-contactos> -->
+
+
+<!-- todo ejemplo de peticion HTTP -->
+
+<!-- <app-login-form></app-login-form> -->
+
+<app-formulario-anidado></app-formulario-anidado>
